Cover array in JS.

--- a/intro_JS/index.html
+++ b/intro_JS/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1 id="meassage"></h1>
 
-    <!-- <script src="./script.js" ></script> -->
-    <script>
+    <script src="./script.js" ></script>
+    <!-- <script>
         let meassage= document.getElementById("meassage");
         meassage.innerHTML= "HIii"
-    </script>
+    </script> -->
 
 
 </body>
